package/objects/Quiz_Session__c/fields/Current_Question__c.field-meta.xml
<CustomField>
    <fullName>Current_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Question</label>
    <referenceTo>Quiz_Question__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Quiz_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>