package/objects/Quiz_Session__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>