package/objects/Quiz_Session__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>sfqz__Phase__c</fullName>
    <label>Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sfqz__Quiz_Phase</valueSetName>
    </valueSet>
</CustomField>